# Carte-Diem

./: README.md  backup.ino  sdkconfig  sdkconfig.old
CAD/: Hand Scanner Final.step  README.md
PCB/: README.md
barcanner_button_prox/barcode_scanner_interrupt/: barcode.cpp  barcode.h  barcode_scanner_interrupt.ino  proximity_sensor.h
cart/: README.md  master.py  products.db  requirements.txt  sample.csv
cart/shopping-ui/: README.md  boundary.json  cart.db  cart_ops.py  eecsboundary.json  main.js  package-lock.json  package.json  preload.js  setting.db
cart/shopping-ui/src/: Admin.css  Admin.jsx  Cart.css  Cart.jsx  Setup.css  Setup.jsx  index.css  index.js
cart_tracking/: .gitignore  README.md  app.py  cart_template.py  gen_random_data.py  grocery_store_rfid2map.csv  requirements.txt  rfid.c  rfid.h  rfid2map.csv  rfidDataFilter.py  session.csv  session.txt  walkthrough1.csv  walkthrough1.txt  walkthrough2.csv  walkthrough2.txt  walkthrough3.csv  walkthrough3.txt  walkthrough_stopping.csv  walkthrough_stopping.txt
cart_tracking/ct-website/: dashboard.html  package-lock.json  package.json  vite.config.js
integration/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
integration/main/: cartediem_defs.h  main.c
integration/main/interfaces/: imu.c  (+16 more)
interfaces/: barcode.cpp  barcode.h  proximity_sensor.cpp
main/: CMakeLists.txt  cartediem_defs.h  main.c
main/interfaces/: ble_barcode_nimble.c  ble_barcode_nimble.h  cart_rfid.c  cart_rfid.h  cart_tracking.c  cart_tracking.h  imu.c  imu.h  imu_defs.h  loadcells.c  loadcells.h
(+60 files in other folders)
